--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ canvas {
  
    
   <canvas id="pinkboard"></canvas>
-  <h1 class="chu">Nguyen Thuy</h1>
+  <h1 class="chu">Empty</h1>
   <script>
   /*
  * Settings
